[seungwoo][#update]CSS PR

--- a/KosaESS/src/main/resources/templates/manager/student_list.html
+++ b/KosaESS/src/main/resources/templates/manager/student_list.html
@@ -48,7 +48,7 @@
 						</select>
 					</div>
 					<div class="search_filter_name">
-						검색 기간<span class="star">*</span>
+						출결 기간<span class="star">*</span>
 					</div>
 					<div class="search_filter_input_date_wrap">
 						<div class="search_filter_input_date">
