--- a/KosaESS/src/main/resources/templates/admin/notice_form.html
+++ b/KosaESS/src/main/resources/templates/admin/notice_form.html
@@ -140,7 +140,7 @@
 						th:value="${postVO.postId}">
 					<button class="cancel_btn" type="button"
 						onclick="location.href='/admin/notice/list'">취소</button>
-					<button class="insert_btn" type="submit">수정</button>
+					<button class="insert_btn" type="submit">저장</button>
 				</div>
 			</div>
 			<!-- Content Bottom-->
