--- a/KosaESS/src/main/resources/templates/manager/mypage_updateInfo.html
+++ b/KosaESS/src/main/resources/templates/manager/mypage_updateInfo.html
@@ -39,14 +39,14 @@
 				</tr>
 				<tr>
 					<th>비밀번호</th>
-					<td><input type="password" class="input_password" name="inputPassword"></td>
+					<td><input type="password" class="input_password" name="inputPassword" placeholder="새 비밀번호 입력"></td>
 				</tr>
 				<tr>
 					<th>비밀번호 확인</th>
-					<td><input type="password" class="input_password_confirm" name="confirmPassword"></td>
+					<td><input type="password" class="input_password_confirm" name="confirmPassword" placeholder="새 비밀번호 확인"></td>
 				</tr>
 				<tr>
-					<th>전화번호</th>
+					<th>전화번호<span class="star">*</span></th>
 					<td><input th:value="${thisManager.mngrTel}" class="input_tel" name="inputTel"></td>
 				</tr>
 			</table>
