--- a/KosaESS/src/main/resources/templates/manager/student_list.html
+++ b/KosaESS/src/main/resources/templates/manager/student_list.html
@@ -4,8 +4,7 @@
 <meta charset="UTF-8">
 </head>
 <head>
-<link th:href="@{/css/manager/manager_student_list.css}"
-	rel="stylesheet" />
+<link th:href="@{/css/manager/manager_student_list.css}" rel="stylesheet" />
 <link th:href="@{/css/manager/alert_box.css}" rel="stylesheet" />
 </head>
 <body>
