--- a/KosaESS/src/main/resources/templates/include/student_footer.html
+++ b/KosaESS/src/main/resources/templates/include/student_footer.html
@@ -23,12 +23,10 @@
 					<h2>Contact</h2>
 					<ul>
 						<li><img th:src="@{/img/ping.png}"><span
-							style="width: 14%">주소 </span><span>서울시 용산구 청파로 61길 5 6F~8F</span></li>
-						<li><img th:src="@{/img/phone.png}"><span>전화번호 </span><span>
-								010-5744-9937</span></li>
+							style="width: 80px;">주소 </span><span>서울시 용산구 청파로 61길 5 6F~8F</span></li>
+						<li><img th:src="@{/img/phone.png}"><span style="width: 80px;">전화번호 </span><span>010-5744-9937</span></li>
 						<li><img th:src="@{/img/email.png}"><span
-							style="width: 12%">이메일 </span><span>
-								kcceducation@gmail.com</span></li>
+							style="width: 80px;">이메일 </span><span>kcceducation@gmail.com</span></li>
 					</ul>
 				</div>
 				<div class="emailJoin">
