--- a/KosaESS/src/main/resources/templates/student/main.html
+++ b/KosaESS/src/main/resources/templates/student/main.html
@@ -49,7 +49,7 @@
 								<span th:text="${session.stdtNm}"
 									style="color: #0E5881; font-size: 22px;"></span>님 환영합니다!
 							</h2>
-							<div class="my" style="text-align: left;">
+							<div class="my" style="text-align: center;">
 								<div class="box aplyList">
 									<span>지원내역: </span> <span
 										style="color: #0E5881; font-size: 22px;"
@@ -62,7 +62,7 @@
 								</div>
 							</div>
 
-							<div class="lastlog">
+							<div class="lastlog" style="text-align: center;">
 								<h4>마지막 로그인 일시</h4>
 								<h4 id="lastLog"></h4>
 							</div>
@@ -153,7 +153,7 @@
 					<div style="width: 100%;">
 						<div class="content">
 							<div id="calendar-container"
-								style="background: white; width: 600px;">
+								style="background: white; width: 700px;">
 								<div id="calendar"></div>
 							</div>
 						</div>
