[dabin][#update]임시저장

--- a/KosaESS/src/main/resources/templates/student/mypage.html
+++ b/KosaESS/src/main/resources/templates/student/mypage.html
@@ -40,7 +40,7 @@
 								<td class="infoInput"><input type="text" id="userName"></td>
 							</tr>
 							<tr>
-								<th>이메일<span> *</span></th>
+								<th>이메일</th>
 								<td><div id="userEmail"></div></td>
 							</tr>
 							<tr>
