--- a/KosaESS/src/main/resources/static/css/student/main.css
+++ b/KosaESS/src/main/resources/static/css/student/main.css
@@ -214,20 +214,21 @@ input::placeholder {
 	color: #0E5881;
 	text-decoration: none;
 	font-weight: bold;
+	width: fit-content;
+	margin-left: 97%;
 }
 
 .my {
 	text-align: center;
 }
 
-.aplyList, .rgstList{
+.aplyList, .rgstList {
 	cursor: pointer;
 }
 
 .aplyList:hover, .rgstList:hover {
 	background: white;
 }
-
 
 .inouttm {
 	display: flex;
